entity classes fixed